for google search verification

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Official homepage of Prathamesh Deshmukh, a Physics PhD scholar and scientific programmer, showcasing key projects in lab automation (PICA), local AI (Kusanagi-AI), and computational physics.">
     <meta name="keywords" content="Prathamesh Deshmukh, Physics PhD, Scientific Programmer, Python, Lab Automation, PICA, Kusanagi-AI, Condensed Matter Physics, Data Analysis">
     <meta name="author" content="Prathamesh Deshmukh">
+    <meta name="google-site-verification" content="WoJ2SuFteO4FFKOlZvqY9tYfbrh2TnFoi-uyAOZRGQk" />
     <link rel="canonical" href="https://prathameshnium.github.io/">
     
     <meta property="og:title" content="Prathamesh Deshmukh | Scientific Programmer & Physics PhD">
