--- a/index.html
+++ b/index.html
@@ -306,6 +306,18 @@
 
         </div> </main>
 
+    <section id="site-links" class="py-12">
+        <h2 class="text-3xl font-bold text-white text-center mb-10">Site Links</h2>
+        <div class="flex flex-wrap justify-center gap-4">
+            <a href="https://prathameshnium.github.io/Kusanagi-AI/" class="text-slate hover:text-accent-orange px-3 py-2 rounded-md text-sm font-medium transition-colors">Kusanagi-AI</a>
+            <a href="https://prathameshnium.github.io/TupperTransformer/" class="text-slate hover:text-accent-orange px-3 py-2 rounded-md text-sm font-medium transition-colors">TupperTransformer</a>
+            <a href="https://prathameshnium.github.io/Kusanagi-AI/web_apps/OneTail_Web_Chatapp.html" class="text-slate hover:text-accent-orange px-3 py-2 rounded-md text-sm font-medium transition-colors">OneTail Web Chatapp</a>
+            <a href="https://prathameshnium.github.io/Kusanagi-AI/web_apps/Orochimaru_Web_Research_Assistent.html" class="text-slate hover:text-accent-orange px-3 py-2 rounded-md text-sm font-medium transition-colors">Orochimaru Web Research Assistent</a>
+            <a href="https://prathameshnium.github.io/Kusanagi-AI/web_apps/Neji_Search.html" class="text-slate hover:text-accent-orange px-3 py-2 rounded-md text-sm font-medium transition-colors">Neji Search</a>
+            <a href="https://prathameshnium.github.io/Kusanagi-AI/web_apps/Visualize_AI_Web.html" class="text-slate hover:text-accent-orange px-3 py-2 rounded-md text-sm font-medium transition-colors">Visualize AI Web</a>
+        </div>
+    </section>
+
     <footer class="text-center py-12 border-t border-gray-700">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <p class="text-slate">&copy; 2025 Prathamesh Keshao Deshmukh. All Rights Reserved.</p>
