Dev.to and hacker news profile added

--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@
                     <a href="https://scholar.google.com/citations?user=DJgzI30AAAAJ&hl=en&oi=ao" target="_blank" rel="noopener noreferrer">
                         <img src="https://img.shields.io/badge/Google_Scholar-4285F4?style=for-the-badge&logo=google-scholar&logoColor=white" alt="Google Scholar Profile"/>
                     </a>
+                    <a href="https://dev.to/prathamesh_phy" target="_blank" rel="noopener noreferrer">
+                        <img src="https://img.shields.io/badge/dev.to-0A0A0A?style=for-the-badge&logo=dev.to&logoColor=white" alt="Dev.to Profile"/>
+                    </a>
+                    <a href="https://news.ycombinator.com/submitted?id=prathameshnium" target="_blank" rel="noopener noreferrer">
+                        <img src="https://img.shields.io/badge/Hacker_News-FF6600?style=for-the-badge&logo=hacker-news&logoColor=white" alt="Hacker News Profile"/>
+                    </a>
                 </div>
             </section>
 
